# lapt

./: Cargo.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/apt_wrappers_migration_20251229/: plan.md
conductor/tracks/enhance_pkg_details_20251229/: metadata.json  plan.md  spec.md
conductor/tracks/online_search_signals_20251229/: plan.md
src/: action.rs  app.rs  apt.rs  backend.rs  backend_tests.rs  main.rs  notification_tests.rs  pkg.rs  pkg_tests.rs  tab_tests.rs  ui.rs  ui_details.rs  ui_error_tests.rs  ui_tab_tests.rs  ui_tests.rs
