[package]
name = "lapt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
tachyonfx = "0.20.1"
strum = { version = "0.26", features = ["derive"] }
tokio = {version = "1.48.0", features = ["full"]}
futures-util = "0.3.31"
